all queries working in computer but bug with search bar on mobile

--- a/src/components/Options/Options.css
+++ b/src/components/Options/Options.css
@@ -70,12 +70,32 @@
     }
 }
 
-@media screen and (max-width:425px) and (max-height:900px){
+@media screen and (max-width:425px) and (max-height:600px){
     .main-options-container{
-        margin-top: 30px;
+        margin-top: 60px;
     }
     .pentagon-container img{
-        height: 45vh;
-        width:auto;
+        height: auto;
+        width:60vw;
+    }
+}
+
+@media screen and (max-width:415px) and (max-height:915px){
+    .main-options-container{
+        margin-top: 120px;
+    }
+    .pentagon-container img{
+        height: auto;
+        width:65vw;
+    }
+}
+
+@media screen and (max-width:360px) and (max-height:800px){
+    .main-options-container{
+        margin-top: 10px;
+    }
+    .pentagon-container img{
+        height: auto;
+        width:70vw;
     }
 }
