--- a/src/components/Result/Result.css
+++ b/src/components/Result/Result.css
@@ -42,7 +42,7 @@
     
     .result-container h3{
         letter-spacing: 1px;
-        font-size: 70px;
+        font-size: 50px;
     }
     
     .result-container h1{
@@ -146,13 +146,13 @@
 
 }
 
-@media screen and (max-width:1024px) and (max-height:700px){
+@media screen and (max-width:1024px) and (max-height:900px){
     .result-container h3{
         font-size:25px;
     }
 }
 
-@media screen and (max-width:768px) and (max-height:600px){
+@media screen and (max-width:768px) and (max-height:900px){
     .result-container h3{
         font-size: 20px;
     }
@@ -168,6 +168,7 @@
         width: 120px;
     }
 }
+
 
 @media screen and (max-width:768px) and (max-height:330px){
     .result-container h3{
@@ -186,11 +187,11 @@
     }
 }
 
-@media screen and (max-width:425px) and (max-height:900px){
+@media screen and (max-width:425px) and (max-height:920px){
     .result-container{
         position: absolute;
         top: 50%;
-        height: auto;
+        height: fit-content;
         width: 80%;
         left:10%;  
     }
@@ -201,7 +202,23 @@
     
     .result-container h1{
         margin-top: 1%;
-        font-size: 35px;
+        font-size: 33px;
+    }
+
+    .result-container button{
+        height: 30px;
+        font-size: 11px;
+        width: 120px;
+    }
+    
+}
+
+@media screen and (max-width:340px) and (max-height:920px){
+    .result-container{
+        left:11%;  
+    }
+    .result-container h3{
+        font-size: 20px;
     }
     
 }
