--- a/src/components/Rules/Rules.css
+++ b/src/components/Rules/Rules.css
@@ -94,7 +94,7 @@ button:hover{
     }
 
     .rules-image{
-        height: 700px;
+        height: 600px;
     }
     
     .rules-text-container img{
@@ -182,7 +182,7 @@ button:hover{
         margin-top: 0px;
     }
     
-    button{
+    .button-container button{
         display: flex;
         align-items: center;
         justify-content: center;
@@ -244,11 +244,38 @@ button:hover{
     }
   }
 
-  @media screen and (max-width:425px) and (max-height:900px){
+  @media screen and (max-width:425px) and (max-height:920px){
     .button-container{
         display: flex;
         justify-content: center;
-        margin-top: 80px;
         margin-right: 0%;
+    }
+    .rules-image{
+        height: 200px;
+    }
+    .button-container button{
+        position: absolute;
+        bottom: 5%;
+    }
+  }
+  
+
+  @media screen and (max-width:415px) and (max-height:920px){
+    .button-container button{
+        font-size: 20px;
+        width: 140px;
+        height: 40px;
+    }
+    .rules-image{
+        height: 260px;
+    }
+    .button-container{
+        margin-top: 10%;
+    }
+  }
+
+  @media screen and (max-width:340px) and (max-height:920px){
+    .rules-image{
+        height: 200px;
     }
   }
