--- a/src/components/scoreboard/Scoreboard.css
+++ b/src/components/scoreboard/Scoreboard.css
@@ -157,6 +157,26 @@
     }
 }
 
+@media screen and (max-width:1024px) and (max-height:900px){
+    .score-main-container{
+        margin-bottom: 100px;
+    }
+    .score-text-container{
+        margin: 10px 0px;
+    }
+    .score-text-container p{
+        font-size: 20px;
+    }
+    
+    .score-number-container h4{
+        padding: 0px;
+        font-size: 15px;
+    }
+    
+    .score-number-container h1{
+        font-size: 50px;
+    }
+}
 
 @media screen and (max-width:1024px) and (max-height:465px){
     .score-main-container{
@@ -176,6 +196,27 @@
     
     .score-number-container h1{
         font-size: 40px;
+    }
+}
+
+@media screen and (max-width:768px) and (max-height:900px){
+    .score-main-container{
+        width: 65%;
+    }
+    .score-main-container{
+        margin-top: 15px;
+    }
+    .score-text-container p{
+        font-size: 20px;
+    }
+    
+    .score-number-container h4{
+        padding: 0px;
+        font-size: 15px;
+    }
+    
+    .score-number-container h1{
+        font-size: 45px;
     }
 }
 
@@ -200,6 +241,8 @@
         font-size: 40px;
     }
 }
+
+
 
 @media screen and (max-width:768px) and (max-height:600px){
     .score-main-container{
@@ -236,7 +279,7 @@
     }
 }
 
-@media screen and (max-width:425px) and (max-height:900px){
+@media screen and (max-width:425px) and (max-height:920px){
     .score-main-container{
         width: 80%;
         border-radius: 10px;
@@ -263,5 +306,35 @@
     }
     .score-number-container h1{
         font-size: 30px;
+    }
+}
+
+@media screen and (max-width:415px) and (max-height:920px){
+    .score-text-container p{
+        font-size: 13px;
+    }
+
+    .score-number-container{
+        padding: 3px 1px;
+    }
+    .score-number-container h4{
+        font-size: 11px;
+    }
+    .score-number-container h1{
+        font-size: 35px;
+    }
+}
+
+
+@media screen and (max-width:415px) and (max-height:920px){
+    .score-text-container p{
+        font-size: 17px;
+    }
+    .score-number-container h4{
+        padding: 0px;
+        font-size: 13px;
+    }
+    .score-number-container h1{
+        font-size: 35px;
     }
 }
